@@ -4,5 +4,13 @@
 ?>
 
 <p>
-Inventory allow you to have a complete list of devices of the monitored servers. With this you can have information of CPU, RAM memory, patches, software, etc. of your servers. 
+Inventory allow you to have a complete list of devices of the monitored servers. With this you can have information of CPU, RAM memory, patches, software, etc. of your servers. <br><br>
+Next are described the fields that you should complete to add an Inventory Module.<br>
+    <ul><b>Module:</b> Combo where you can choose the Inventory Module that you want to add. It will only show the modules which Operative System will match up with that from the agent.</ul>
+    <ul><b>Target:</b> IP or servername from you want to get the inventory.</ul>
+    <ul><b>Interval:</b> Combo where you choose the time interval in which the Inventory Module will ve executed.</ul>
+    <ul><b>Username:</b> User that will ve used to execute the Inventory Module.</ul>
+    <ul><b>Password:</b> User Password that will be used to execute the Inventory Module.</ul>
+
+<p>You can apply changes in all modules clicking in "Update all" when update any module.
 </p>
