@@ -3,6 +3,19 @@
 */
 ?>
 
-<p>El inventario te permite tener una lista completa de todos los dispositivos de los servidores monitorizados. Con esto se puede tener informacion de CPU, memoria RAM, parches, software, etc. de tus servidores.
-</p>
+<p>El inventario te permite tener una lista completa de todos los dispositivos de los servidores monitorizados. Con esto se puede tener informacion de CPU, memoria RAM, parches, software, etc. de tus servidores.<br></p>
+
+<p>A continuación se describen los campos que hay que completar para añadir un módulo de inventario.<br>
+
+    <ul><b>Module:</b> Combo donde se elige el módulo de inventario que se quiere añadir. Sólo aparecerán los módulos cuyo Sistema Operativo coincide con el del agente.</ul>
+    <ul><b>Target:</b> IP o nombre del servidor del que se quiere sacar el inventario.</ul>
+    <ul><b>Interval:</b> Combo donde se elige el intervalo de tiempo en que se ejecutará el módulo de inventario.</ul>
+    <ul><b>Username:</b> Usuario que se usara para ejecutar el módulo de inventario.</ul>
+    <ul><b>Password:</b> Password del usuario que se usara para ejecutar el módulo de inventario. </ul>
+
+<p>Una vez completado el formulario se pulsa en “Add” para que el módulo se añada a los módulos de inventario.<br></p>
+
+<p>Puede aplicar cambios en todos los módulos haciendo clic en "Actualizar todo" cuando se actualice cualquiera de los módulos.</p>
+
+
 
